name:                tart
version:             0.1
synopsis:            Terminal Art
description:         A program to make ASCII art
license:             BSD3
license-file:        LICENSE
author:              Jonathan Daugherty
maintainer:          cygnus@foobox.com
copyright:           2017 Jonathan Daugherty
category:            Graphics
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable tart
  ghc-options:         -threaded -Wall -Werror
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Events
                       Events.Main
                       Events.CharacterSelect
                       Events.PaletteEntrySelect
                       Events.ToolSelect
                       Events.Common
                       Events.CanvasSizePrompt
                       UI
                       UI.Main
                       UI.Common
                       UI.CharacterSelect
                       UI.PaletteEntrySelect
                       UI.ToolSelect
                       UI.CanvasSizePrompt
                       Util
                       Theme
                       Types
                       App
                       Draw
  default-language:    Haskell2010
  build-depends:       base >=4.9 && < 5,
                       brick >= 0.23,
                       vty >= 5.17,
                       array,
                       vector,
                       microlens-platform,
                       microlens-th,
                       mtl,
                       text,
                       text-zipper
