name:                tart
version:             0.1
synopsis:            Terminal Art
description:         A program to make ASCII art
license:             BSD3
license-file:        LICENSE
author:              Jonathan Daugherty
maintainer:          cygnus@foobox.com
copyright:           2017 Jonathan Daugherty
category:            Graphics
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall -Werror
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:
                       Tart.Canvas
                       Tart.Format
  build-depends:       base >=4.9 && < 5,
                       array,
                       binary,
                       vty >= 5.17,
                       microlens-platform,
                       bytestring,
                       mtl,
                       binary

executable tart
  ghc-options:         -threaded -Wall -Werror
  hs-source-dirs:      programs
  main-is:             Main.hs
  other-modules:       Events
                       Events.Main
                       Events.CharacterSelect
                       Events.PaletteEntrySelect
                       Events.ToolSelect
                       Events.Common
                       Events.CanvasSizePrompt
                       Events.AskToSave
                       Events.TextEntry
                       Events.BoxStyleSelect
                       Events.StyleSelect
                       UI
                       UI.Main
                       UI.Common
                       UI.CharacterSelect
                       UI.PaletteEntrySelect
                       UI.ToolSelect
                       UI.CanvasSizePrompt
                       UI.AskToSave
                       UI.TextEntry
                       UI.BoxStyleSelect
                       UI.StyleSelect
                       Util
                       Theme
                       Types
                       App
                       Draw
  default-language:    Haskell2010
  build-depends:       base >=4.9 && < 5,
                       brick >= 0.24,
                       vty >= 5.17,
                       vector,
                       microlens-platform,
                       microlens-th,
                       mtl,
                       text,
                       text-zipper,
                       directory,
                       containers,
                       tart
