name:                tart
version:             0.1.1
synopsis:            Terminal Art
description:         A program to make ASCII art
license:             BSD3
license-file:        LICENSE
author:              Jonathan Daugherty
maintainer:          cygnus@foobox.com
copyright:           2017 Jonathan Daugherty
category:            Graphics
build-type:          Simple
extra-source-files:  CHANGELOG.md
                     README.md
cabal-version:       >=1.10
Homepage:            https://github.com/jtdaugherty/tart/
Bug-reports:         https://github.com/jtdaugherty/tart/issues

Source-Repository head
  type:     git
  location: git://github.com/jtdaugherty/tart.git

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:
                       Tart.Canvas
                       Tart.Format
                       Tart.Format.Types
                       Tart.Format.V0
                       Tart.Format.V1
                       Tart.Format.V2
  build-depends:       base >=4.9 && < 5,
                       array,
                       binary,
                       vty >= 5.17.1,
                       microlens-platform,
                       bytestring,
                       mtl,
                       binary

executable tart
  ghc-options:         -threaded -Wall
  hs-source-dirs:      programs
  main-is:             Main.hs
  other-modules:       Events
                       Events.Main
                       Events.CharacterSelect
                       Events.PaletteEntrySelect
                       Events.ToolSelect
                       Events.Common
                       Events.CanvasSizePrompt
                       Events.AskToSave
                       Events.AskForSaveFilename
                       Events.TextEntry
                       Events.BoxStyleSelect
                       Events.RenameLayer
                       Events.StyleSelect
                       UI
                       UI.Main
                       UI.Common
                       UI.CharacterSelect
                       UI.PaletteEntrySelect
                       UI.ToolSelect
                       UI.CanvasSizePrompt
                       UI.AskToSave
                       UI.AskForSaveFilename
                       UI.TextEntry
                       UI.BoxStyleSelect
                       UI.StyleSelect
                       State
                       Theme
                       Types
                       App
                       Draw
                       Draw.Line
                       Draw.Box
  default-language:    Haskell2010
  build-depends:       base >=4.9 && < 5,
                       brick >= 0.24,
                       vty >= 5.17,
                       vector,
                       microlens-platform,
                       microlens-th,
                       mtl,
                       text,
                       text-zipper,
                       directory,
                       containers,
                       tart,
                       text-zipper
